Various fixes to spatial functions (ST_ENVELOPE and ST_NPOINTS)
* Made ST_ENVELOPE multi-value aware
* Added ST_NPOINTS
* Refactored doc-values support (so ST_ENVELOPE, ST_NPOINTS and all geogrid functions are similar)